# rules_swc

./: .bazelignore  .bazeliskrc  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl  package.json  rules_js.patch
.aspect/: config.axl  version.axl
.aspect/cli/: config.yaml
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazelrc  ci.yaml  mirror.yml  new_issue.yaml  publish.yaml  release.yml  release_prep.sh  workspace_snippet.sh
docs/: .bazelrc  BUILD.bazel  MODULE.bazel  repositories.md  swc.md  tsconfig.md
e2e/bzlmod/: MODULE.bazel  WORKSPACE.bazel  foo.ts
e2e/emit_types/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  a.ts  b.ts
e2e/path_mapping/: .bazelrc  MODULE.bazel
e2e/smoke/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  rules_js.patch
e2e/smoke_rjs3/: BUILD.bazel  MODULE.bazel
e2e/workspace/: BUILD  WORKSPACE
examples/: BUILD.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/allow_js/: BUILD.bazel  expected.cjs  in.jsx
examples/custom_outs/: BUILD.bazel  c.tsx  expected.cjs  expected.js
examples/directory/: BUILD.bazel  mocks.bzl  test.sh
examples/emit_types/: BUILD.bazel  expected.a.d.ts  expected.b.d.ts
examples/emit_types/src/: a.ts  b.ts
examples/filegroup/: .swcrc  BUILD.bazel  a.ts  b.ts  check_outputs.sh
examples/generate_swcrc/: BUILD.bazel  package.json  tsconfig.json  write_swcrc.js
examples/generate_swcrc/app/: main.ts
examples/genrule/: BUILD.bazel  check_outputs.sh
examples/macro/: BUILD.bazel  expected.js  in.ts  ts_project.bzl
examples/opaque_src/: BUILD.bazel  expected.js  in.ts
examples/out_dir/: BUILD.bazel  check_outputs.sh
examples/out_dir/expected/: a.js.map  b.js.map
examples/out_dir/expected/sub/: c.js.map  c.js.map.golden
examples/out_dir/sub/: c.ts
examples/paths/: .swcrc  BUILD.bazel  expected.js  tsconfig.json
examples/paths/expected_tsc/: index.js
examples/paths/expected_tsc/modules/moduleA/: index.js
examples/paths/expected_tsc/modules/moduleB/: index.js
examples/paths/src/: index.ts
examples/paths/src/modules/moduleA/: index.ts
examples/plugins/: BUILD.bazel  dts.ts  expected_rc.js_  expected_rcdict.js_  expected_simple.js_  in.ts  minify.swcrc  package.json
examples/rc/: .swcrc  BUILD.bazel
examples/rc/src/: BUILD.bazel  expected.js  expected.js.map  in.ts
examples/rcdict/: BUILD.bazel
examples/resolve_json_module/: BUILD.bazel  index.ts
examples/root_dir/: BUILD.bazel
examples/root_dir/expected/: a.js.map  a.js.map.golden  b.js.map  b.js.map.golden
examples/root_dir/expected/sub/: c.js  c.js.map  c.js.map.golden
examples/root_dir/expected_dot/src/: a.js  a.js.map.golden  b.js
examples/root_dir/expected_nested/: c.js.map.golden
examples/root_dir/src/: b.ts
examples/simple/: BUILD.bazel  expected.js
examples/source_map_support/: BUILD.bazel  defs.bzl
examples/source_map_support/test/: BUILD.bazel  a.ts
examples/source_map_support/test/simple/: BUILD.bazel  a.ts
examples/source_map_support/test/swcrc/: BUILD.bazel  a.ts
examples/source_root/: BUILD.bazel  expected.js  expected.js.map  expected.js.map.golden  expected_subdir.js  expected_subdir.js.map  expected_subdir.js.map.golden
examples/transitive/: BUILD.bazel  expected
examples/transitive/app/: BUILD.bazel  a.ts
examples/transitive/lib_b/: BUILD.bazel  b.ts
examples/transitive/lib_c/: BUILD.bazel
examples/typeonly/: BUILD.bazel  README.md  a.ts  c.d.ts  swcrc.json
examples/typeonly/expected/: a.js  a.js.map.golden  b.js  b.js.map.golden
scripts/: filter.jq  mirror_release.sh  mirror_releases.sh
swc/: BUILD.bazel  BUILD.swc  cli_repositories.bzl  defs.bzl  dependencies.bzl  extensions.bzl  package.json  pnpm-lock.json  pnpm-lock.yaml  providers.bzl  repositories.bzl  swc.bzl  toolchain.bzl
swc/private/: BUILD.bazel  cli_repositories.bzl  package-lock.json  resolved_toolchain.bzl  swc.bzl  swc.pr2983.patch  swc_core.patch  swc_plugin.bzl  testing.bzl  toolchains_repo.bzl  versions.bzl
swc/tests/: BUILD.bazel  expected.js  versions_test.bzl
tools/: BUILD.bazel  preset.bazelrc
