"aspect-build/rules_swc"

module(
    name = "aspect_rules_swc",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.0.0-rc1")

# Note: only used for provider symbols, we don't spawn nodejs actions
bazel_dep(name = "aspect_rules_js", version = "1.33.1")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.4")

swc = use_extension("@aspect_rules_swc//swc:extensions.bzl", "swc")
swc.toolchain(
    name = "swc",
    swc_version = "v1.3.75",
)
use_repo(swc, "swc_toolchains")

register_toolchains("@swc_toolchains//:all")
