# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    bzl_library_target = "//swc:swc",
    out_label = "//docs:swc.md",
)

update_docs(
    name = "update",
    docs_folder = "docs",
)
