# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "swc",
    bzl_library_target = "//swc:defs",
)

stardoc_with_diff_test(
    name = "repositories",
    bzl_library_target = "//swc:repositories",
)

update_docs(
    name = "update",
    tags = ["skip-on-bazel6"],  # slight docs difference in Bazel 6
)
