load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_js//js:defs.bzl", "link_js_package")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@swc_cli//:defs.bzl", "link_js_packages")
load("@swc_cli//swc/@swc/cli:package_json.bzl", swc_cli_bin = "bin")

write_source_files(
    name = "write_cli_repos",
    files = {
        "cli_repositories.bzl": "@swc_cli//:repositories.bzl",
    },
)

link_js_package(
    name = "link_core",
    src = "@npm__at_swc_core__1.2.185//:jsp",
    root_package = "swc",
)

link_js_packages()

# For stardoc to reference the files
exports_files(["defs.bzl"])

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swc/private:toolchains_repo",
        "//swc/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

swc_cli_bin.swc_binary(
    name = "cli",
    data = [
        ":link_core",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "dependencies",
    srcs = ["dependencies.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//swc/private:swc",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:types",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
