"""Directory use case for swc: minifying a folder of code-split files

This has to be a directory-in, directory-out pattern since the codesplitter produces unpredictable filenames.

Note that this example also depends on the setup in /WORKSPACE at the root of this repository.
"""

load("@aspect_rules_swc//swc:defs.bzl", "swc")

# gazelle:exclude *.bzl
load(":mocks.bzl", "mock_codesplit")

mock_codesplit(
    name = "split_app",
)

# Runs `swc path/to/split_app --out-dir ../../examples/directory/minify`
# You can run `bazel build --subcommands //examples/directory:minify`
# to see the exact command line Bazel runs.
swc(
    name = "minify",
    srcs = ["split_app"],
    output_dir = True,
    source_maps = True,
)

sh_test(
    name = "minify_test",
    srcs = ["test.sh"],
    args = [
        "split_app",
        "minify",
    ],
    data = ["minify"],
    env = {
        "BAZEL_BINDIR": "$(BINDIR)",
    },
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

swc(
    name = "out_dir",
    srcs = ["split_app"],
    out_dir = "test-out_dir",
    output_dir = True,
    source_maps = True,
)

sh_test(
    name = "out_dir_test",
    srcs = ["test.sh"],
    args = [
        "split_app",
        "test-out_dir",
    ],
    data = ["out_dir"],
    env = {
        "BAZEL_BINDIR": "$(BINDIR)",
    },
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

swc(
    name = "out_dir_w_config",
    srcs = ["split_app"],
    out_dir = "config-out_dir",
    output_dir = True,
    swcrc = {
        "minify": False,
    },
)
