load("@aspect_rules_swc//swc:defs.bzl", "swc")

filegroup(
    name = "srcs",
    srcs = [
        "a.ts",
        "b.ts",
    ],
)

swc(
    name = "compile",
    srcs = ["srcs"],
    source_maps = "true",
    # We don't have to specify this. When .swcrc is present, it's used automatically.
    # swcrc = ".swcrc",
)

# Since the srcs were in a filegroup, the swc macro cannot pre-declare the outputs.
# So there is no label ":a.js" that we can reference from the build file.
# However, a.js is still produced as one of the default outputs of the compile rule.
# We can verify this in an action that depends on the ":compile" rule and reads the files.
sh_test(
    name = "check_outputs",
    srcs = ["check_outputs.sh"],
    data = [":compile"],
)
