load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

filegroup(
    name = "srcs",
    srcs = [
        "a.ts",
        "b.ts",
        "sub/c.ts",
    ],
)

swc(
    name = "compile",
    srcs = ["srcs"],
    source_maps = True,
    # We don't have to specify this. When a .swcrc configuration file is present in the current directory, it's used automatically.
    # swcrc = ".swcrc",
)

# Since the srcs were in a filegroup, the swc macro cannot pre-declare the outputs.
# So there is no label ":a.js" that we can reference from the build file.
# However, a.js is still produced as one of the default outputs of the compile rule.
# We can verify this in an action that depends on the ":compile" rule and reads the files.
sh_test(
    name = "check_outputs",
    srcs = ["check_outputs.sh"],
    data = [":compile"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
