load("@aspect_bazel_lib//lib:testing.bzl", "assert_json_matches")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//examples/generate_swcrc:tsconfig-to-swcconfig/package_json.bzl", tsconfig_to_swcconfig = "bin")

npm_link_all_packages(name = "node_modules")

tsconfig_to_swcconfig.t2s(
    name = "write_swcrc",
    srcs = ["tsconfig.json"],
    args = [
        "--filename",
        "$(location tsconfig.json)",
    ],
    stdout = ".swcrc",
    visibility = ["//:__subpackages__"],
)

# Demonstrate that it works
swc(
    name = "compile",
    srcs = ["some.ts"],
    swcrc = ".swcrc",
)

# Verify that our options got passed through
assert_json_matches(
    name = "test",
    file1 = ".swcrc",
    file2 = "tsconfig.json",
    filter1 = ".jsc.target",
    filter2 = ".compilerOptions.target",
)
