load("@aspect_bazel_lib//lib:jq.bzl", "jq")
load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains", "assert_json_matches")
load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//examples/generate_swcrc:tsconfig-to-swcconfig/package_json.bzl", tsconfig_to_swcconfig = "bin")

npm_link_all_packages(name = "node_modules")

tsconfig_to_swcconfig.t2s(
    name = "write_swcrc",
    srcs = ["tsconfig.json"],
    args = [
        "--filename",
        "$(location tsconfig.json)",
    ],
    stdout = ".swcrc",
    visibility = ["//:__subpackages__"],
)

# Demonstrate that it works
swc(
    name = "compile",
    srcs = glob([
        "app/**",
        "lib/**",
    ]),
    swcrc = ".swcrc",
)

# Verify that our options got passed through
assert_json_matches(
    name = "test",
    file1 = ".swcrc",
    file2 = "tsconfig.json",
    filter1 = ".jsc.target",
    filter2 = ".compilerOptions.target",
)

# Regression test for https://github.com/aspect-build/rules_swc/issues/325 — a generated
# swcrc using `jsc.paths` should produce the same relative import as a swcrc in the source
# tree, not an absolute path through the filesystem root via the execroot symlink.
assert_contains(
    name = "test_paths_import",
    actual = "app/main.js",
    expected = 'from "../lib/utils/utils.js"',
)

# With copy_srcs_to_bin = False, srcs are transpiled in place (no per-src copy action).
# A `jsc.baseUrl` is resolved relative to the generated swcrc's output location, so it
# must step over bazel-out/<config>/bin and the package path back into the source tree.
jq(
    name = "write_swcrc_execroot",
    srcs = [":write_swcrc"],
    out = ".swcrc_execroot",
    filter = '.jsc.baseUrl = "../../../../../examples/generate_swcrc"',
)

swc(
    name = "compile_no_copy",
    srcs = glob([
        "app/**",
        "lib/**",
    ]),
    copy_srcs_to_bin = False,
    out_dir = "no_copy",
    swcrc = ".swcrc_execroot",
)

assert_contains(
    name = "test_paths_import_no_copy",
    actual = "no_copy/app/main.js",
    expected = 'from "../lib/utils/utils.js"',
)
