load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_bazel_lib//lib:testing.bzl", "assert_outputs")

swc(
    name = "transpile",
    srcs = [
        "a.ts",
        "b.ts",
    ],
    out_dir = "out",
    source_maps = "true",
)

# Since the srcs were in a filegroup, the swc macro cannot pre-declare the outputs.
# So there is no label ":a.js" that we can reference from the build file.
# However, a.js is still produced as one of the default outputs of the transpile rule.
# We can verify this in an action that depends on the ":transpile" rule and reads the files.
assert_outputs(
    name = "check_outputs",
    actual = "transpile",
    expected = [
        "examples/out_dir/out/a.js",
        "examples/out_dir/out/a.js.map",
        "examples/out_dir/out/b.js",
        "examples/out_dir/out/b.js.map",
    ],
)
