load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

swc(
    name = "compile",
    srcs = [
        "a.ts",
        "b.ts",
        "sub/c.ts",
    ],
    out_dir = "out",
    source_maps = True,
)

# Assert that the output of "compile" rule matches the expected file.
write_source_files(
    name = "test",
    files = {
        "expected/a.js": ":out/a.js",
        "expected/a.js.map": ":out/a.js.map",
        "expected/b.js": ":out/b.js",
        "expected/b.js.map": ":out/b.js.map",
        "expected/sub/c.js": ":out/sub/c.js",
        "expected/sub/c.js.map": ":out/sub/c.js.map",
    },
)