"""Path-alias use case for swc: specifying the paths options in .swcrc

Note that this example also depends on the setup in /WORKSPACE at the root of this repository.
"""

load("@aspect_bazel_lib//lib:testing.bzl", "assert_json_matches")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_swc//swc:defs.bzl", "swc")

# Note: .swcrc will be automatically found in the current folder
swc(name = "compile")

# Verify that the "paths" entry is agreed between swc and TS language service (in the editor)
assert_json_matches(
    name = "check_paths",
    file1 = "tsconfig.json",
    file2 = ".swcrc",
    filter1 = ".compilerOptions.paths",
    filter2 = ".jsc.paths",
)

write_source_files(
    name = "test",
    files = {
        "expected.js": "src/index.js",
    },
)
